--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,7 @@
             </div>
         </div>
     </div>
-    <button onclick="topFunction()" id="myBtn" class="go to top">
-        Top
-    </button>
+    <button  onclick="topFunction()" id="myBtn" class="go to top">Top</button>
     <!------featured categories ----->
     <div class="categories">
         <div class="small-container">
