Modal Return Policy

--- a/public/index.html
+++ b/public/index.html
@@ -363,14 +363,15 @@
                                         <br>
                                         <i class="fas fa-map-pin"></i>
                                         <br>
-                                        <p> Lagos, Nigeria</p>
+                                        <p> Niger, Nigeria</p>
                                     </div>
                                     <br>
                                     <br>
                                     <div>
                                         <i class="fas fa-phone"></i>
                                         <br>
-                                        <p>+234 81 000 000 00</p>
+                                        <p>+2348084614891</p>
+                                        <p>+2348164878532</p>
                                     </div>
                                     <br>
                                     <br>
@@ -382,14 +383,22 @@
                                     <br>
                                     <br>
                                     <div>
-                                        <img src="images/facebook.png" alt="" width="30px" height="30px">
-                                        <img src="images/twitter.png" alt="" width="30px" height="30px">
-                                        <img src="images/instagram.png" alt="" width="30px" height="30px">
+                                        <a href="https://wa.me/message/UJ53MGMTAXB3B1"> <img src="images/whatsapp.png" alt="" width="30px" height="30px"> </a>
+                                        <a href="https://twitter.com/The_Peng_C"> <img src="images/twitter.png" alt="" width="30px" height="30px"> </a>
+                                        <a href="https://www.instagram.com/the_peng_collection_/"> <img src="images/instagram.png" alt="" width="30px" height="30px"> </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
+                <!-- Modal for return policy -->
+                <div id="myModal" class="modal">
+                    <div class="modal-container">
+                        
+
+                    </div>
+
                 </div>
                 <!--Footer  -->
                 <div class="footer">
@@ -402,9 +411,9 @@
                             <div class="footer-col-4">
                                 <h3>Follow us:</h3>
                                 <ul>
-                                    <li> <a href=""> Twitter  </a> </li>
-                                    <li> <a href=""> Facebook </a> </li>
-                                    <li> <a href=""> Instagram </a> </li>
+                                    <li> <a href="https://twitter.com/The_Peng_C"> Twitter  </a> </li>
+                                    <!--<li> <a href="https://wa.me/message/UJ53MGMTAXB3B1"> Whatsapp </a> </li> -->
+                                    <li> <a href="https://www.instagram.com/the_peng_collection_/"> Instagram </a> </li>
                                 </ul>
                             </div>
                             <div class="footer-col-4">
@@ -414,6 +423,7 @@
                                     <li> Join affliate </li>
                                 </ul>
                             </div>
+                            <!--
                             <div class="footer-col-4">
                                 <h3>Useful links</h3>
                                     <ul>
@@ -421,6 +431,7 @@
                                         <li> Join affliate </li>
                                     </ul>
                             </div>
+                            -->
                         </div>
                     </div>
                 </div>
