Added modal for return policy

--- a/public/index.html
+++ b/public/index.html
@@ -393,7 +393,13 @@
                 <!-- Modal for return policy -->
                 <div id="myModal" class="modal">
                     <div class="modal-container">
-                        
+                        <span class="close"> &times;</span>
+                        <h2> Return Policy </h2>
+                        <p> To our dear esteemed customers, our products are only eligible for return and refund if issues are reported within two days of product purchase. </p>
+                        <br>
+                        <br>
+                        <br>
+                        <p> Signed: Peng Collections</p>
 
                     </div>
 
@@ -417,7 +423,7 @@
                             <div class="footer-col-4">
                                 <h3>Useful links</h3>
                                 <ul>
-                                    <li> Return policy </li>
+                                    <li class="return" id="openModal"> Return policy </li>
                                     <li> Join affliate </li>
                                 </ul>
                             </div>
