Added new header background

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
                 </div>
                 <div class="col-2">
-                    <img src="images/image2-rm.png" alt="">
+                    <img src="images/bg-test-removebg.png" alt="">
 
                 </div>
 
@@ -381,9 +381,9 @@
                                     <br>
                                     <br>
                                     <div>
-                                        <a href="https://wa.me/message/UJ53MGMTAXB3B1"> <img src="images/whatsapp.png" alt="" width="30px" height="30px"> </a>
-                                        <a href="https://twitter.com/The_Peng_C"> <img src="images/twitter.png" alt="" width="30px" height="30px"> </a>
-                                        <a href="https://www.instagram.com/the_peng_collection_/"> <img src="images/instagram.png" alt="" width="30px" height="30px"> </a>
+                                        <a href="https://wa.me/message/UJ53MGMTAXB3B1" target="_blank"> <img src="images/whatsapp.png" alt="" width="30px" height="30px"> </a>
+                                        <a href="https://twitter.com/The_Peng_C" target="_blank"> <img src="images/twitter.png" alt="" width="30px" height="30px"> </a>
+                                        <a href="https://www.instagram.com/the_peng_collection_/" target="_blank"> <img src="images/instagram.png" alt="" width="30px" height="30px"> </a>
                                     </div>
                                 </div>
                             </div>
@@ -415,9 +415,9 @@
                             <div class="footer-col-4">
                                 <h3>Follow us:</h3>
                                 <ul>
-                                    <li> <a href="https://twitter.com/The_Peng_C"> Twitter  </a> </li>
+                                    <li> <a href="https://twitter.com/The_Peng_C" target="_blank"> Twitter  </a> </li>
                                     <!--<li> <a href="https://wa.me/message/UJ53MGMTAXB3B1"> Whatsapp </a> </li> -->
-                                    <li> <a href="https://www.instagram.com/the_peng_collection_/"> Instagram </a> </li>
+                                    <li> <a href="https://www.instagram.com/the_peng_collection_/" target="_blank"> Instagram </a> </li>
                                 </ul>
                             </div>
                             <div class="footer-col-4">
